# obsidian

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  io.magma.terminal.json  obsidian-debug.log.jsonl  sample-malformed.jsonl
.claude/: settings.local.json
assets/: io.magma.terminal.metainfo.xml  io.obsidian.terminal.desktop
assets/icons/hicolor/: index.theme
docs/: FEATURES.md  LINUX_BUNDLE_PACK.md  TERMINAL_WORKSPACE_GUIDE.md
scripts/: build-appimage.sh  generate-test-logs.sh  package-linux-bundle.sh
src/: logger.rs  main.rs
src/features/logs/: file_ops.rs  log_entry.rs  log_level.rs  mod.rs
src/linux_terminal/: header.rs  link.rs  logr.rs  mod.rs  mux.rs  persist.rs  profile.rs  right_pane.rs  runtime.rs  session.rs  settings.rs  shell.rs  style.rs  tab.rs  terminal.rs
src/linux_terminal/git/: branches.rs  diff.rs  graph.rs  host.rs  mod.rs  ops.rs  search.rs  staging.rs  stash.rs
src/linux_terminal/input/: history.rs  inspector.rs  mod.rs  prompt.rs  status.rs
src/linux_terminal/settings/: about.rs  browser.rs  page.rs  sections.rs  terminal.rs  widgets.rs
src/linux_terminal/setup/: checkpoint.rs  controls.rs  mod.rs
src/linux_terminal/view/: code.rs  docx.rs  editor.rs  files.rs  host.rs  mod.rs  preview.rs  ui.rs
src/linux_terminal/web/: browser.rs  host.rs  mod.rs  navigation.rs  persist.rs  tabs.rs
src/linux_terminal/workspace/: mod.rs  ops.rs  tab_strip.rs
