[package]
name = "obsidian"
version = "0.1.0-beta.1"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
clap = "4.5.60"
crossterm = "0.29.0"
fontdue = "0.9"
gtk = { version = "0.10.3", package = "gtk4" }
image = "0.25"
portable-pty = "0.8"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
softbuffer = "0.4"
tokio = "1.50.0"
vte = "0.13"
vte4 = { version = "0.9.0", features = ["v0_70"] }
webkit6 = "0.5.0"
winit = "0.29"
